// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CustodyStatusBadge > renders 'ACTIVE' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--green"
    >
      <span>
        Active
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody is currently active.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'CANCELLED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--gray"
    >
      <span>
        Cancelled
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody was cancelled before completion.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'COMPLETED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--green"
    >
      <span>
        Completed
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody has been completed successfully.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'COMPLETING' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--amber"
    >
      <span>
        Completing
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody is in the completion process.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'DEPOSIT_CONFIRMED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--teal"
    >
      <span>
        Deposit Confirmed
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody deposit has been confirmed.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'DEPOSIT_PENDING' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--blue"
    >
      <span>
        Deposit Pending
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody deposit is awaiting payment confirmation.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'DISPUTED' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--red"
    >
      <span>
        Disputed
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        A dispute has been raised for this custody.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'EXPIRING_SOON' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--amber"
    >
      <span
        class="status-badge__icon"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-3.5 w-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
      </span>
      <span>
        Expiring Soon
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody is close to ending and requires attention.
      </div>
    </div>
  </div>
</div>
`;

exports[`CustodyStatusBadge > renders 'PENDING' correctly 1`] = `
<div>
  <div
    class="group relative inline-flex"
  >
    <span
      class="status-badge status-badge--gray"
    >
      <span>
        Pending
      </span>
    </span>
    <div
      class="status-badge__tooltip-wrapper"
    >
      <div
        class="status-badge__tooltip"
      >
        Custody is pending and has not started yet.
      </div>
    </div>
  </div>
</div>
`;
